# SpeechAlgo

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
docs/theory/: enhancement.md  pitch.md  preprocessing.md  vad.md
docs/tutorials/: getting_started.md
speechalgo/: __init__.py  version.py
speechalgo/enhancement/: __init__.py  noise_gate.py  spectral_subtraction.py  wiener_filter.py
speechalgo/features/: __init__.py  delta.py  spectral.py  temporal.py
speechalgo/pitch/: __init__.py  autocorrelation.py  base.py  cepstral.py  hps.py  yin.py
speechalgo/preprocessing/: __init__.py  framing.py  mel_spectrogram.py  mfcc.py  pre_emphasis.py  windowing.py
speechalgo/utils/: __init__.py  audio_io.py  signal_processing.py  validation.py
speechalgo/vad/: __init__.py  base.py  energy_based.py  spectral_entropy.py  zero_crossing.py
tests/: conftest.py
tests/test_enhancement/: __init__.py  test_noise_gate.py  test_spectral_subtraction.py  test_wiener_filter.py
tests/test_features/: __init__.py  test_delta.py  test_spectral.py  test_temporal.py
tests/test_pitch/: __init__.py  test_autocorrelation.py  test_cepstral.py  test_hps.py  test_yin.py
tests/test_preprocessing/: __init__.py  test_framing.py  test_mel_spectrogram.py  test_mfcc.py  test_pre_emphasis.py  test_windowing.py
tests/test_utils/: __init__.py  test_signal_processing.py  test_validation.py
tests/test_vad/: __init__.py  test_energy_based.py  test_spectral_entropy.py  test_zero_crossing.py
